--- a/angular.json
+++ b/angular.json
@@ -20,16 +20,22 @@
               "zone.js"
             ],
             "tsConfig": "tsconfig.app.json",
-            "assets": [
-              {
-                "glob": "**/*",
-                "input": "public"
-              }
-            ],
+            
+             "assets": [
+    "src/assets",
+    "src/favicon.ico"
+  ],
+            
+           
             "styles": [
-              "src/styles.css"
-            ],
-            "scripts": []
+  "node_modules/bootstrap/dist/css/bootstrap.min.css",
+  "src/styles.css"
+],
+
+            "scripts": [
+                "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
+
+            ]
           },
           "configurations": {
             "production": {
@@ -53,6 +59,7 @@
               "sourceMap": true
             }
           },
+          
           "defaultConfiguration": "production"
         },
         "serve": {
@@ -89,6 +96,7 @@
             ],
             "scripts": []
           }
+          
         }
       }
     }
